[gd_scene load_steps=16 format=3 uid="uid://giwx2ioysoot"]

[ext_resource type="Texture2D" uid="uid://b84kos15c1maw" path="res://Assets/UI/party_background.png" id="1_hwxdf"]
[ext_resource type="Script" path="res://Scenes/UI/party_screen.gd" id="1_nyw7a"]
[ext_resource type="Texture2D" uid="uid://bmup1q8o4nrgm" path="res://Assets/UI/main_pokemon_background.png" id="1_urug2"]
[ext_resource type="Texture2D" uid="uid://clu7vopy4hyri" path="res://Assets/UI/Pokemon/charmander_menu.png" id="2_1uydf"]
[ext_resource type="Theme" uid="uid://cun343t873x4o" path="res://Scenes/UI/menu_theme.tres" id="3_r2g54"]
[ext_resource type="FontFile" uid="uid://b3ynf240onmy4" path="res://Assets/Fonts/pkmnfl.ttf" id="4_tjowx"]
[ext_resource type="Texture2D" uid="uid://cce8ahdqmj40s" path="res://Assets/UI/gender_icons.png" id="5_2q8x5"]
[ext_resource type="Texture2D" uid="uid://uaqoxfq6qhvd" path="res://Assets/UI/green_bar.png" id="6_utcu8"]
[ext_resource type="Texture2D" uid="uid://cygndnup0am01" path="res://Assets/UI/standby_pokemon_background.png" id="7_8kd4u"]
[ext_resource type="Texture2D" uid="uid://dcvfw8p8val8q" path="res://Assets/UI/exit_background_button.png" id="8_lcc1j"]
[ext_resource type="FontFile" uid="uid://dgrb6vwb25lwm" path="res://Assets/Fonts/power clear.ttf" id="11_20qo2"]

[sub_resource type="Animation" id="Animation_640i4"]
resource_name = "Idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pokemon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ss5u6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pokemon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ho0qg"]
resource_name = "selected"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pokemon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pokemon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(18, 44), Vector2(18, 36), Vector2(18, 44), Vector2(18, 36)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mswsx"]
_data = {
"Idle": SubResource("Animation_640i4"),
"RESET": SubResource("Animation_ss5u6"),
"selected": SubResource("Animation_ho0qg")
}

[node name="PartyScreen" type="CanvasLayer"]
script = ExtResource("1_nyw7a")

[node name="Slots" type="Node2D" parent="."]
z_index = 2
position = Vector2(192, 48)

[node name="First" type="Node2D" parent="Slots"]
position = Vector2(-192, -48)

[node name="Panel" type="Sprite2D" parent="Slots/First"]
position = Vector2(44, 46.5)
texture = ExtResource("1_urug2")
hframes = 2
frame = 1

[node name="Pokemon" type="Sprite2D" parent="Slots/First"]
position = Vector2(18, 44)
texture = ExtResource("2_1uydf")
hframes = 2

[node name="Gender" type="Sprite2D" parent="Slots/First"]
position = Vector2(74, 47)
texture = ExtResource("5_2q8x5")
hframes = 2
frame = 1

[node name="Name" type="RichTextLabel" parent="Slots/First"]
offset_left = 32.0
offset_top = 32.0
offset_right = 92.0
offset_bottom = 40.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "CHARMANDER"

[node name="Level" type="RichTextLabel" parent="Slots/First"]
texture_filter = 1
clip_contents = false
offset_left = 51.0
offset_top = 43.0
offset_right = 61.0
offset_bottom = 52.0
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "5"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
language = "en"

[node name="TotalHP" type="RichTextLabel" parent="Slots/First"]
clip_contents = false
offset_left = 66.0
offset_top = 63.0
offset_right = 80.0
offset_bottom = 72.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 8
text = "12"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="RemainHP" type="RichTextLabel" parent="Slots/First"]
clip_contents = false
offset_left = 44.0
offset_top = 63.0
offset_right = 58.0
offset_bottom = 72.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 8
text = "15"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="Health" type="Sprite2D" parent="Slots/First"]
position = Vector2(56, 57.5)
texture = ExtResource("6_utcu8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots/First"]
libraries = {
"": SubResource("AnimationLibrary_mswsx")
}
autoplay = "Idle"

[node name="Second" type="Node2D" parent="Slots"]
position = Vector2(-94, -48)

[node name="Panel" type="Sprite2D" parent="Slots/Second"]
position = Vector2(65, 21)
texture = ExtResource("7_8kd4u")
hframes = 2

[node name="Pokemon" type="Sprite2D" parent="Slots/Second"]
position = Vector2(6, 22)
texture = ExtResource("2_1uydf")
hframes = 2

[node name="Gender" type="Sprite2D" parent="Slots/Second"]
position = Vector2(64, 25.5)
texture = ExtResource("5_2q8x5")
hframes = 2
frame = 1

[node name="Name" type="RichTextLabel" parent="Slots/Second"]
offset_left = 21.0
offset_top = 13.0
offset_right = 81.0
offset_bottom = 21.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "CHARMANDER"

[node name="Level" type="RichTextLabel" parent="Slots/Second"]
texture_filter = 1
clip_contents = false
offset_left = 42.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 31.0
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "5"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
language = "en"

[node name="TotalHP" type="RichTextLabel" parent="Slots/Second"]
clip_contents = false
offset_left = 120.0
offset_top = 22.0
offset_right = 134.0
offset_bottom = 32.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "12"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="RemainHP" type="RichTextLabel" parent="Slots/Second"]
clip_contents = false
offset_left = 96.0
offset_top = 22.0
offset_right = 110.0
offset_bottom = 31.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "15"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="Health" type="Sprite2D" parent="Slots/Second"]
position = Vector2(110, 16.5)
texture = ExtResource("6_utcu8")
region_filter_clip_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots/Second"]
libraries = {
"": SubResource("AnimationLibrary_mswsx")
}
autoplay = "Idle"

[node name="Third" type="Node2D" parent="Slots"]
position = Vector2(-94, -24)

[node name="Panel" type="Sprite2D" parent="Slots/Third"]
position = Vector2(65, 21)
texture = ExtResource("7_8kd4u")
hframes = 2

[node name="Pokemon" type="Sprite2D" parent="Slots/Third"]
position = Vector2(6, 22)
texture = ExtResource("2_1uydf")
hframes = 2

[node name="Gender" type="Sprite2D" parent="Slots/Third"]
position = Vector2(64, 25.5)
texture = ExtResource("5_2q8x5")
hframes = 2
frame = 1

[node name="Name" type="RichTextLabel" parent="Slots/Third"]
offset_left = 21.0
offset_top = 13.0
offset_right = 81.0
offset_bottom = 21.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "CHARMANDER"

[node name="Level" type="RichTextLabel" parent="Slots/Third"]
texture_filter = 1
clip_contents = false
offset_left = 42.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 31.0
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "5"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
language = "en"

[node name="TotalHP" type="RichTextLabel" parent="Slots/Third"]
clip_contents = false
offset_left = 120.0
offset_top = 22.0
offset_right = 134.0
offset_bottom = 32.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "12"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="RemainHP" type="RichTextLabel" parent="Slots/Third"]
clip_contents = false
offset_left = 96.0
offset_top = 22.0
offset_right = 110.0
offset_bottom = 31.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "15"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="Health" type="Sprite2D" parent="Slots/Third"]
position = Vector2(110, 16.5)
texture = ExtResource("6_utcu8")
region_filter_clip_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots/Third"]
libraries = {
"": SubResource("AnimationLibrary_mswsx")
}
autoplay = "Idle"

[node name="Fourth" type="Node2D" parent="Slots"]
position = Vector2(-94, 0)

[node name="Panel" type="Sprite2D" parent="Slots/Fourth"]
position = Vector2(65, 21)
texture = ExtResource("7_8kd4u")
hframes = 2

[node name="Pokemon" type="Sprite2D" parent="Slots/Fourth"]
position = Vector2(6, 22)
texture = ExtResource("2_1uydf")
hframes = 2

[node name="Gender" type="Sprite2D" parent="Slots/Fourth"]
position = Vector2(64, 25.5)
texture = ExtResource("5_2q8x5")
hframes = 2
frame = 1

[node name="Name" type="RichTextLabel" parent="Slots/Fourth"]
offset_left = 21.0
offset_top = 13.0
offset_right = 81.0
offset_bottom = 21.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "CHARMANDER"

[node name="Level" type="RichTextLabel" parent="Slots/Fourth"]
texture_filter = 1
clip_contents = false
offset_left = 42.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 31.0
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "5"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
language = "en"

[node name="TotalHP" type="RichTextLabel" parent="Slots/Fourth"]
clip_contents = false
offset_left = 120.0
offset_top = 22.0
offset_right = 134.0
offset_bottom = 32.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "12"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="RemainHP" type="RichTextLabel" parent="Slots/Fourth"]
clip_contents = false
offset_left = 96.0
offset_top = 22.0
offset_right = 110.0
offset_bottom = 31.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "15"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="Health" type="Sprite2D" parent="Slots/Fourth"]
position = Vector2(110, 16.5)
texture = ExtResource("6_utcu8")
region_filter_clip_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots/Fourth"]
libraries = {
"": SubResource("AnimationLibrary_mswsx")
}
autoplay = "Idle"

[node name="Fifth" type="Node2D" parent="Slots"]
position = Vector2(-94, 24)

[node name="Panel" type="Sprite2D" parent="Slots/Fifth"]
position = Vector2(65, 21)
texture = ExtResource("7_8kd4u")
hframes = 2

[node name="Pokemon" type="Sprite2D" parent="Slots/Fifth"]
position = Vector2(6, 22)
texture = ExtResource("2_1uydf")
hframes = 2

[node name="Gender" type="Sprite2D" parent="Slots/Fifth"]
position = Vector2(64, 25.5)
texture = ExtResource("5_2q8x5")
hframes = 2
frame = 1

[node name="Name" type="RichTextLabel" parent="Slots/Fifth"]
offset_left = 21.0
offset_top = 13.0
offset_right = 81.0
offset_bottom = 21.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "CHARMANDER"

[node name="Level" type="RichTextLabel" parent="Slots/Fifth"]
texture_filter = 1
clip_contents = false
offset_left = 42.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 31.0
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "5"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
language = "en"

[node name="TotalHP" type="RichTextLabel" parent="Slots/Fifth"]
clip_contents = false
offset_left = 120.0
offset_top = 22.0
offset_right = 134.0
offset_bottom = 32.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "12"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="RemainHP" type="RichTextLabel" parent="Slots/Fifth"]
clip_contents = false
offset_left = 96.0
offset_top = 22.0
offset_right = 110.0
offset_bottom = 31.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "15"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="Health" type="Sprite2D" parent="Slots/Fifth"]
position = Vector2(110, 16.5)
texture = ExtResource("6_utcu8")
region_filter_clip_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots/Fifth"]
libraries = {
"": SubResource("AnimationLibrary_mswsx")
}
autoplay = "Idle"

[node name="Sixth" type="Node2D" parent="Slots"]
position = Vector2(-94, 48)

[node name="Panel" type="Sprite2D" parent="Slots/Sixth"]
position = Vector2(65, 21)
texture = ExtResource("7_8kd4u")
hframes = 2

[node name="Pokemon" type="Sprite2D" parent="Slots/Sixth"]
position = Vector2(6, 22)
texture = ExtResource("2_1uydf")
hframes = 2

[node name="Gender" type="Sprite2D" parent="Slots/Sixth"]
position = Vector2(64, 25.5)
texture = ExtResource("5_2q8x5")
hframes = 2
frame = 1

[node name="Name" type="RichTextLabel" parent="Slots/Sixth"]
offset_left = 21.0
offset_top = 13.0
offset_right = 81.0
offset_bottom = 21.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "CHARMANDER"

[node name="Level" type="RichTextLabel" parent="Slots/Sixth"]
texture_filter = 1
clip_contents = false
offset_left = 42.0
offset_top = 22.0
offset_right = 52.0
offset_bottom = 31.0
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "5"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
language = "en"

[node name="TotalHP" type="RichTextLabel" parent="Slots/Sixth"]
clip_contents = false
offset_left = 120.0
offset_top = 22.0
offset_right = 134.0
offset_bottom = 32.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "12"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="RemainHP" type="RichTextLabel" parent="Slots/Sixth"]
clip_contents = false
offset_left = 96.0
offset_top = 22.0
offset_right = 110.0
offset_bottom = 31.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_r2g54")
theme_override_colors/font_shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_fonts/normal_font = ExtResource("4_tjowx")
theme_override_font_sizes/normal_font_size = 9
text = "15"
scroll_active = false
autowrap_mode = 0
tab_size = 0
meta_underlined = false
hint_underlined = false
text_direction = 2
language = "en"

[node name="Health" type="Sprite2D" parent="Slots/Sixth"]
position = Vector2(110, 16.5)
texture = ExtResource("6_utcu8")
region_filter_clip_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots/Sixth"]
libraries = {
"": SubResource("AnimationLibrary_mswsx")
}
autoplay = "Idle"

[node name="Background" type="TextureRect" parent="."]
offset_right = 240.0
offset_bottom = 160.0
auto_translate = false
localize_numeral_system = false
texture = ExtResource("1_hwxdf")
stretch_mode = 3

[node name="Panel" type="Sprite2D" parent="Background"]
position = Vector2(211, 144)
texture = ExtResource("8_lcc1j")
hframes = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Background"]
layout_mode = 0
offset_left = 8.0
offset_top = 135.0
offset_right = 176.0
offset_bottom = 154.0
theme = ExtResource("3_r2g54")
theme_override_colors/default_color = Color(0.439216, 0.439216, 0.439216, 1)
theme_override_colors/font_shadow_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/normal_font = ExtResource("11_20qo2")
theme_override_font_sizes/normal_font_size = 12
text = "Choose a POKéMON"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
